--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,9 +1,3 @@
-.title {
-  font-size: 3rem;
-  padding: 5px;
-  margin-left: 30px;
-  color: white;
-}
 .head {
   height: 5rem;
   background-color: black;
@@ -12,6 +6,12 @@
   justify-content: space-between;
   color: white;
   flex-wrap: wrap;
+}
+.title {
+  font-size: 3rem;
+  padding: 5px;
+  margin-left: 30px;
+  color: white;
 }
 .button {
   background-color: grey;
@@ -29,10 +29,13 @@
 }
 
 .filterorder {
-  background-color: grey;
+  background-color: rgb(173, 165, 165);
   width: 95vw;
   margin: auto;
   margin-top: 10px;
   height: 3rem;
   border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
