--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,5 +1,6 @@
 .img {
   width: 25px;
+  padding-right: 5px;
 }
 
 /*  */
@@ -56,4 +57,31 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.select {
+  border-radius: 5px;
+  padding: 4px;
+  background-color: #ccc;
+  /* font-size: 0.8rem; */
+  border: none;
+}
+.sortsfilterdiv {
+  border-radius: 5px;
+  display: flex;
+  padding: 15px;
+  background-color: rgb(124, 124, 124);
+}
+
+.search {
+  border-radius: 5px;
+  padding: 8px;
+  background-color: #fff;
+  /* font-size: 0.8rem; */
+  border: none;
+}
+
+.leftdiv {
+  display: flex;
+  margin-left: 10px;
 }
