--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -70,48 +70,60 @@ input:checked + .slider:before {
 .sortsfilterdiv {
   border-radius: 5px;
   display: flex;
-  background-color: rgb(124, 124, 124);
+  /* background-color: rgb(124, 124, 124); */
   height: 4rem;
   align-items: center;
-  padding: 0px 10px;
+  padding: 0px 30px;
 }
 
 .leftdiv {
   display: flex;
   margin-left: 10px;
+  width: 100vw;
 }
 .divsearch {
   align-items: center;
   margin-left: auto;
   display: flex;
   justify-content: center;
+  /* background-color: rgb(124, 124, 124); */
+  height: 4rem;
+  border-radius: 5px;
+  margin-right: 10px;
 }
 .search {
   border-radius: 5px;
   padding: 8px 50px;
-  background-color: #fff;
+  background-color: #ccc;
+  color: black;
   font-size: 18px;
   border: none;
   margin: 0 30px;
+  height: 28px;
 }
-.search {
-  border-radius: 5px;
-  display: flex;
-  padding: 8px;
-  /* background-color: rgb(124, 124, 124); */
-  /* align-self: center; */
+::placeholder {
+  color: black;
 }
+
 .addimg {
   width: 60px;
   /* padding: 5px; */
   position: absolute;
   top: 15px;
   right: 15px;
-  background-color: #ccc;
-  border-radius: 17px;
 }
 .addimg:hover {
   width: 65px;
   top: 12.5px;
   right: 12.5px;
+}
+.dot {
+  width: 50px;
+  height: 50px;
+  /* padding: 5px; */
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #ccc;
+  border-radius: 50%;
 }
