--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -2,7 +2,7 @@
   font-size: 20px;
 }
 .head {
-  height: 6rem;
+  height: 4rem;
   background-color: #353432;
   display: flex;
   align-items: flex-start;
@@ -13,7 +13,7 @@
 }
 .title {
   font-size: 3rem;
-  padding: 5px;
+  /* padding: 5px; */
   margin-left: 30px;
   color: white;
 }
@@ -42,5 +42,5 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
