--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -3,3 +3,15 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.btn {
+  border-radius: 5px;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color: #ccc;
+  transition: background-color 0.5s;
+}
+.btn:hover {
+  background-color: rgb(173, 165, 165);
+}
