--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,12 +1,12 @@
 .title {
   font-size: 3rem;
-  padding: 5px;
+  /* padding: 5px; */
   /* padding-left: 15px; */
   margin-left: 30px;
   color: white;
 }
 .head {
-  height: 5rem;
+  height: 4rem;
   background-color: #353432;
   display: flex;
   align-items: flex-start;
@@ -16,7 +16,7 @@
   background-color: grey;
   border: none;
   color: white;
-  padding: 15px;
+  padding: 10px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
