--- a/client/src/components/Landing Page/LandingPage.module.css
+++ b/client/src/components/Landing Page/LandingPage.module.css
@@ -9,6 +9,7 @@
   font-size: 25px;
   margin: 15px 2px;
   border-radius: 5px;
+  transition: background-color 0.5s;
 }
 .button:hover {
   background-color: black;
