--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -39,11 +39,26 @@
   font-size: 16px;
   margin: 15px 30px;
   border-radius: 5px;
+  width: 300px;
 }
 .button:hover {
   background-color: rgb(70, 66, 66);
 }
-
+.buttonDisabled {
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 15px 30px;
+  border-radius: 5px;
+  width: 300px;
+}
+.buttonDisabled:hover {
+  background-color: crimson;
+}
 .inputdivhalf {
   width: 300px;
   height: 80px;
@@ -71,8 +86,17 @@
 
 .select {
   width: 300px;
-  height: 40px;
+  height: 50px;
   background-color: #ccc;
   margin: 10px auto;
   border-radius: 5px;
+  font-size: larger;
+  text-align: center;
+}
+
+.inputdiv span {
+  color: crimson;
+}
+.inputdivhalf span {
+  color: crimson;
 }
