--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -13,7 +13,9 @@
   background-color: rgb(173, 165, 165);
 }
 .card img {
-  height: 230px;
+  max-height: 12vw;
+  /* height: 230px; */
+  height: auto;
   border-radius: 5px;
 }
 .title {
