testing and fixes

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -25,6 +25,10 @@
   text-transform: capitalize;
   text-decoration: none;
 }
+.foot {
+  text-align: start;
+  padding: 5px 15px;
+}
 .foot p {
   margin: 0 5px;
   display: block;
