--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -15,6 +15,7 @@
   max-height: 550px;
   width: auto;
   height: auto;
+  box-shadow: rgba(61, 61, 61, 0.2) 0px 2px 8px 0px;
 }
 .card h1 {
   text-transform: capitalize;
@@ -24,6 +25,7 @@
   background-color: #ccc;
   border-radius: 5px;
   font-size: 1.1rem;
+  box-shadow: rgba(61, 61, 61, 0.2) 0px 2px 8px 0px;
 }
 .foot span {
   font-weight: bold;
