--- a/client/src/components/Landing Page/LandingPage.module.css
+++ b/client/src/components/Landing Page/LandingPage.module.css
@@ -1,5 +1,6 @@
 .button {
-  background-color: grey;
+  /* background-color: grey; */
+  background-color: #69788d;
   border: none;
   color: white;
   padding: 20px;
