--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -43,3 +43,10 @@
   justify-content: flex-start;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+@media (max-width: 992px) {
+  .filterorder {
+    flex-direction: column;
+    height: 8rem;
+  }
+}
