--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -41,13 +41,13 @@
   border-radius: 5px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 @media (max-width: 992px) {
   .filterorder {
     flex-direction: column;
-    height: 8rem;
+    height: 12rem;
   }
 }
