--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -80,6 +80,7 @@ input:checked + .slider:before {
   display: flex;
   margin-left: 10px;
   width: 100vw;
+  /* display: none; */
 }
 .divsearch {
   align-items: center;
@@ -89,6 +90,7 @@ input:checked + .slider:before {
   height: 4rem;
   border-radius: 5px;
   margin-right: 10px;
+  /* display: none; */
 }
 .search {
   border-radius: 5px;
@@ -146,15 +148,30 @@ input:checked + .slider:before {
   }
   .search {
     border-radius: 5px;
-    padding: 8px 100px;
+    /* padding: 8px 20px; */
     background-color: #ccc;
     color: black;
     font-size: 18px;
     border: none;
-    margin: 0 30px;
+    margin: 0;
     height: 28px;
   }
   .origin {
     display: none;
+  }
+  .leftdiv {
+    flex-direction: column;
+    font-size: 15px;
+    height: 120px;
+    /* justify-content: flex-start; */
+  }
+  .sortsfilterdiv {
+    margin: auto;
+  }
+  .select {
+    height: 2rem;
+  }
+  .divsearch {
+    margin-left: 10px;
   }
 }
