--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -6,3 +6,13 @@
   left: 0;
   bottom: 5px;
 }
+@media (max-width: 992px) {
+  .footer a {
+    font-family: monospace;
+    color: #69788d;
+    position: initial;
+    right: 0;
+    left: 0;
+    bottom: 5px;
+  }
+}
