--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -148,7 +148,7 @@ input:checked + .slider:before {
   }
   .search {
     border-radius: 5px;
-    /* padding: 8px 20px; */
+    padding: 6px 40px;
     background-color: #ccc;
     color: black;
     font-size: 18px;
@@ -163,7 +163,6 @@ input:checked + .slider:before {
     flex-direction: column;
     font-size: 15px;
     height: 120px;
-    /* justify-content: flex-start; */
   }
   .sortsfilterdiv {
     margin: auto;
@@ -172,6 +171,8 @@ input:checked + .slider:before {
     height: 2rem;
   }
   .divsearch {
-    margin-left: 10px;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
   }
 }
